force-app/main/default/objects/Shopping_Cart__c/Shopping_Cart__c.object-meta.xml
<CustomObject>
    <label>Shopping Cart</label>
    <nameField>
        <label>Shopping Cart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shopping Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>