force-app/main/default/objects/Shopping_Cart__c/fields/Customer_Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Customer_Fingerprint__c</fullName>
    <label>Customer Fingerprint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>