force-app/main/default/objects/Shopping_Cart__c/fields/Date_of_Cart_Addition__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Cart_Addition__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date of Cart Addition</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>