force-app/main/default/objects/Shopping_Cart__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shopping Carts</relationshipLabel>
    <relationshipName>Shopping_Carts</relationshipName>
    <type>Lookup</type>
</CustomField>