force-app/main/default/objects/Shopping_Cart__c/fields/Product_Variant__c.field-meta.xml
<CustomField>
    <fullName>Product_Variant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Variant</label>
    <referenceTo>Product_Variant__c</referenceTo>
    <relationshipLabel>Shopping Carts</relationshipLabel>
    <relationshipName>Shopping_Carts</relationshipName>
    <type>Lookup</type>
</CustomField>