force-app/main/default/objects/Shopping_Cart__c/fields/ProductBeingBought__c.field-meta.xml
<CustomField>
    <fullName>ProductBeingBought__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Shopping Carts</relationshipLabel>
    <relationshipName>Shopping_Carts</relationshipName>
    <type>Lookup</type>
</CustomField>