force-app/main/default/objects/Shopping_Cart__c/fields/QuantityBeingBought__c.field-meta.xml
<CustomField>
    <fullName>QuantityBeingBought__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>