force-app/main/default/objects/Shopping_Cart__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Person_Account__c</columns>
    <columns>ProductBeingBought__c</columns>
    <columns>Product_Variant__c</columns>
    <columns>QuantityBeingBought__c</columns>
    <columns>Customer_Fingerprint__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>